Fixed wrapped column width

--- a/scss/_utils/_wrap.scss
+++ b/scss/_utils/_wrap.scss
@@ -7,7 +7,7 @@
 
             @for $i from 2 through 4 {
                 &--columns-#{$i} {
-                    width: $i * 100% !important;
+                    width: $i * $submenu-width !important;
                 }
             }
 
